--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -20,4 +20,6 @@
 # available at http://guides.rubyonrails.org/i18n.html.
 
 en:
-  hello: "Hello world"
+  index:
+    hello: "Welcome to our restaurant"
+    detail: "View details"
